# zentype

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.cache/clangd/index/: App.cpp.65AFF3C34E6EEB86.idx  App.h.C698E3B1456A2FCC.idx  SoundManager.cpp.36A9A6C265C7508D.idx  SoundManager.h.F357729FA19BA855.idx  TextInput.cpp.EE71B41D97B9832E.idx  TextInput.h.65033C85FB38C204.idx  UI.cpp.F4A9BF9753C9513D.idx  UI.h.53C4C0EEC548A7CF.idx  main.cpp.9C63940FC75ADDCF.idx
.github/workflows/: c-cpp.yml  cmake-multi-platform.yml
src/: main.cpp
src/app/: App.cpp  App.h
src/audio/: SoundManager.cpp  SoundManager.h
src/input/: TextInput.cpp  TextInput.h
src/ui/: UI.cpp  UI.h
